--- a/docs/参考资源与可爬取网站整合（各种链接）.md
+++ b/docs/参考资源与可爬取网站整合（各种链接）.md
@@ -1,7 +1,3 @@
-# 偏向爬虫技术的文章整理 #
-[由黄琦整理的有关爬虫的微信文章 ](https://hqzing.github.io/2019/02/10/%E5%AF%B9%E5%87%A0%E4%B8%AA%E5%BE%AE%E4%BF%A1%E5%85%AC%E4%BC%97%E5%8F%B72018%E5%B9%B4%E5%88%B0%E7%8E%B0%E5%9C%A8%E6%89%80%E5%8F%91%E8%A1%A8%E7%88%AC%E8%99%AB%E6%96%87%E7%AB%A0%E7%9A%84%E7%AE%80%E5%8D%95%E6%95%B4%E7%90%86/)
-https://hqzing.github.io/2019/02/10/%E5%AF%B9%E5%87%A0%E4%B8%AA%E5%BE%AE%E4%BF%A1%E5%85%AC%E4%BC%97%E5%8F%B72018%E5%B9%B4%E5%88%B0%E7%8E%B0%E5%9C%A8%E6%89%80%E5%8F%91%E8%A1%A8%E7%88%AC%E8%99%AB%E6%96%87%E7%AB%A0%E7%9A%84%E7%AE%80%E5%8D%95%E6%95%B4%E7%90%86/
-
 # 偏向内容设计的文章整理 #
 
 1. [猫眼电影：大数据时代的电影消费洞察](http://www.199it.com/archives/364615.html) http://www.199it.com/archives/364615.html
@@ -11,34 +7,35 @@ https://hqzing.github.io/2019/02/10/%E5%AF%B9%E5%87%A0%E4%B8%AA%E5%BE%AE%E4%BF%A
 3. [当IP遇上大数据 《文娱IP白皮书》在杭发布](http://zjnews.zjol.com.cn/zjnews/hznews/201711/t20171103_5516590.shtml)
 http://zjnews.zjol.com.cn/zjnews/hznews/201711/t20171103_5516590.shtml
 
-4. [场景体验 大数据在文化领域的应用构建](https://www.jianshu.com/p/6a22ca101051) https://www.jianshu.com/p/6a22ca101051
+4. [场景体验 大数据在文化领域的应用构建](https://www.jianshu.com/p/6a22ca101051) 
 
 # 写设计报告可能用到的文章整理 #
 
 1. [大数据算出20年50个大IP，你看靠谱吗？](https://news.pedaily.cn/201811/437493.shtml)https://news.pedaily.cn/201811/437493.shtml
 
-2. [文化大数据生态系统](https://baike.baidu.com/item/%E6%96%87%E5%8C%96%E5%A4%A7%E6%95%B0%E6%8D%AE%E7%94%9F%E6%80%81%E7%B3%BB%E7%BB%9F/19398433)https://baike.baidu.com/item/%E6%96%87%E5%8C%96%E5%A4%A7%E6%95%B0%E6%8D%AE%E7%94%9F%E6%80%81%E7%B3%BB%E7%BB%9F/19398433
-
+2. [文化大数据生态系统](https://baike.baidu.com/item/%E6%96%87%E5%8C%96%E5%A4%A7%E6%95%B0%E6%8D%AE%E7%94%9F%E6%80%81%E7%B3%BB%E7%BB%9F/19398433)
 
 
 # 网站集合 #
 
+这里是之前收到的每个人提供的10个网站，收到的有黄琦、李思佳、孙志远三份文档
+
 ## 小说 ##
 
-1. [17k小说网](http://www.17k.com/) http://www.17k.com/
+1. [17k小说网](http://www.17k.com/)
 这个看起来能直接通过遍历书号去爬取
 
-2. [轻之文库](https://www.linovel.net/) https://www.linovel.net/
+2. [轻之文库](https://www.linovel.net/)
 
-3. [笔趣阁](http://www.biqukan.cc/) http://www.biqukan.cc/
+3. [笔趣阁](http://www.biqukan.cc/)
  网站结构简单，但是是盗版小说，是否适用于比赛，有待斟酌，
 	
 	可爬字段：dd /'div', id='content'
 
-4. [顶点小说](https://www.23us.so/) https://www.23us.so/
+4. [顶点小说](https://www.23us.so/)
 和笔趣阁差不多，虽然结构简单但是是盗版小说
 
-5. [全书网小说]( http://www.quanshuwang.com/) http://www.quanshuwang.com/
+5. [全书网小说]( http://www.quanshuwang.com/) 
 
 	 	github: https://github.com/hahaha108/copyBook
 
@@ -48,14 +45,14 @@ http://zjnews.zjol.com.cn/zjnews/hznews/201711/t20171103_5516590.shtml
 
 ## 漫画 ##
 
-1. [有妖气漫画网](http://www.u17.com/) http://www.u17.com/
+1. [有妖气漫画网](http://www.u17.com/) 
 
-2. [暴走漫画](http://www.cnblogs.com/over140/p/4440137.html)http://www.cnblogs.com/over140/p/4440137.html
+2. [暴走漫画](http://www.cnblogs.com/over140/p/4440137.html)
 	可爬字段： 'img', class_="lazy"
 
-3. [百度动漫](https://cartoon.baidu.com/recommend) https://cartoon.baidu.com/recommend
+3. [百度动漫](https://cartoon.baidu.com/recommend)
 
-4. [漫画](http://www.dm5.com/) http://www.dm5.com/
+4. [漫画](http://www.dm5.com/) 
 
 		github：https://github.com/Hehew/cartoonHomeScrapy
 
@@ -63,7 +60,7 @@ http://zjnews.zjol.com.cn/zjnews/hznews/201711/t20171103_5516590.shtml
 
 ## 直播 ##
 
-1. [斗鱼直播](https://www.douyu.com/) https://www.douyu.com/
+1. [斗鱼直播](https://www.douyu.com/) 
 
 	网上有一些博客写过如何爬取这个网站，不知道现在网站改版没有
 
@@ -71,7 +68,7 @@ http://zjnews.zjol.com.cn/zjnews/hznews/201711/t20171103_5516590.shtml
 
 ## 视频 ##
 
-1. [爱奇艺](https://www.iqiyi.com/) https://www.iqiyi.com/
+1. [爱奇艺](https://www.iqiyi.com/) 
 
 2. [B站](http://vc.bilibili.com/p/eden/rank#/?tab=%E5%85%A8%E9%83%A8)
 
@@ -105,7 +102,7 @@ http://zjnews.zjol.com.cn/zjnews/hznews/201711/t20171103_5516590.shtml
 
 论坛/博客
 
-1. [豆瓣](https://www.douban.com/) https://www.douban.com/
+1. [豆瓣](https://www.douban.com/) 
 
    	各种博客公众号天天就爬这个来xjb分析着玩
 
@@ -115,7 +112,7 @@ http://zjnews.zjol.com.cn/zjnews/hznews/201711/t20171103_5516590.shtml
 
 2. 知乎
 
-   	[知乎日报]( http://daily.zhihu.com/) http://daily.zhihu.com/ 需要去除乱码以及多余的文字，难度大
+   	[知乎日报]( http://daily.zhihu.com/)需要去除乱码以及多余的文字，难度大
 
    	可爬字段：content
 
@@ -125,7 +122,7 @@ http://zjnews.zjol.com.cn/zjnews/hznews/201711/t20171103_5516590.shtml
 
 5. 新浪微博
 
-6. [爬取豆瓣热门电影信息 ]( https://movie.douban.com/top250)https://movie.douban.com/top250
+6. [爬取豆瓣热门电影信息 ]( https://movie.douban.com/top250)
 
   	 	github:https://github.com/dhx20150812/DoubanSpider/blob/master/DoubanTOP250.py
 
@@ -133,7 +130,7 @@ http://zjnews.zjol.com.cn/zjnews/hznews/201711/t20171103_5516590.shtml
 
 音乐
 
-1. [网易云音乐](https://music.163.com/) https://music.163.com/
+1. [网易云音乐](https://music.163.com/) 
 
    	也是爬虫玩家最爱的网站之一
 
@@ -141,6 +138,6 @@ http://zjnews.zjol.com.cn/zjnews/hznews/201711/t20171103_5516590.shtml
 
 诗文
 
-1. [古诗文网](https://www.gushiwen.org/) https://www.gushiwen.org/
+1. [古诗文网](https://www.gushiwen.org/) 
 
    		github：https://github.com/1114319054/scrapypoem/blob/master/scrapypoem.py
