--- a/docs/项目策划电影篇.md
+++ b/docs/项目策划电影篇.md
@@ -32,7 +32,7 @@
 	- 猫眼电影
 	- 时光网（这个网站有一些奇奇怪怪的问题）
 	- 豆瓣等其他影视网站
-	- cbo中国票房http://www.cbooo.cn/m/642412
+	- cbo中国票房
 2. 新浪微博明星粉丝 **属于用户**
 	- 爬取影视明星的粉丝信息
 3. 观影人群 **属于用户**
@@ -118,8 +118,8 @@ https://d.weibo.com/1087030002_2975_1003_0?page=1#Pl_Core_F4RightUserList__4
 活跃与否
 
 参考文章：
-为了知道胡歌粉丝的男女比率，爬了三百万微博数据
-https://blog.csdn.net/qq_41888542/article/details/81184876
+[为了知道胡歌粉丝的男女比率，爬了三百万微博数据](https://blog.csdn.net/qq_41888542/article/details/81184876)
+
 
 **胡歌粉丝这一篇有关于活跃用户的区分处理，值得参考**
 
@@ -168,49 +168,33 @@ https://blog.csdn.net/qq_41888542/article/details/81184876
 
 #### 等等等
 ### 部分参考文章
-2018年网络视频行业用户规模市场现状调查分析
-http://www.sohu.com/a/224933990_361162
+[2018年网络视频行业用户规模市场现状调查分析](http://www.sohu.com/a/224933990_361162)
 
-爱奇艺、腾讯视频、优酷视频的人群和用户分析，助力企业广告效果提升
-http://www.skytech.cn/article/8649.html
+[爱奇艺、腾讯视频、优酷视频的人群和用户分析，助力企业广告效果提升](http://www.skytech.cn/article/8649.html)
 
+[豆瓣电影数据集12万+用户影评40万+爬虫程序(可做推荐系统) ](https://download.csdn.net/download/qq_37717661/10617933)
 
+[爬虫进阶-爬取猫眼电影专业版信息](https://www.jianshu.com/p/e4fffa6a4a02)
 
-豆瓣电影数据集12万+用户影评40万+爬虫程序(可做推荐系统) 
-https://download.csdn.net/download/qq_37717661/10617933
+[【爬虫作业3】爬虫实战：运用正则表达式爬取猫眼电影排行](https://www.jianshu.com/p/9f013c642ce8)
 
-爬虫进阶-爬取猫眼电影专业版信息
-https://www.jianshu.com/p/e4fffa6a4a02
+[python爬虫实战--爬取猫眼专业版-实时票房](https://blog.csdn.net/weixin_36605200/article/details/81623488)
 
-【爬虫作业3】爬虫实战：运用正则表达式爬取猫眼电影排行
-https://www.jianshu.com/p/9f013c642ce8
+[豆瓣电影数据可视化（用Echats做的，有一定参考价值）](http://zhanghonglun.cn/data-visualization/)
 
-python爬虫实战--爬取猫眼专业版-实时票房
-https://blog.csdn.net/weixin_36605200/article/details/81623488
+[从爬虫到分析之2018猫眼电影大数据](http://www.sohu.com/a/277563996_654419)
 
-豆瓣电影数据可视化（用Echats做的，有一定参考价值）
-http://zhanghonglun.cn/data-visualization/
+[反击“猫眼电影”网站的反爬虫策略](https://www.cnblogs.com/h2zZhou/p/7248261.html)
 
-从爬虫到分析之2018猫眼电影大数据 
-http://www.sohu.com/a/277563996_654419
+[豆瓣电影数据分析](https://blog.csdn.net/dta0502/article/details/82839825)
 
-反击“猫眼电影”网站的反爬虫策略
-https://www.cnblogs.com/h2zZhou/p/7248261.html
+[大数据报告：知乎百万用户分析](http://www.woshipm.com/data-analysis/731593.html)
 
-豆瓣电影数据分析
-https://blog.csdn.net/dta0502/article/details/82839825
+[（爬虫软件）详解如何用爬虫采集视频播放量数据（以腾讯视频为例）](https://www.jianshu.com/p/3e68930e19c8)
 
-大数据报告：知乎百万用户分析
-http://www.woshipm.com/data-analysis/731593.html
+[（爬虫软件）免费爬虫程序：后羿采集器如何采集优酷视频播放量数据](https://my.oschina.net/u/4016971/blog/2885416)
 
-（爬虫软件）详解如何用爬虫采集视频播放量数据（以腾讯视频为例）
-https://www.jianshu.com/p/3e68930e19c8
-
-（爬虫软件）免费爬虫程序：后羿采集器如何采集优酷视频播放量数据
-https://my.oschina.net/u/4016971/blog/2885416
-
-腾讯视频发布年度指数，电视剧流量、口碑、演员价值被深度挖掘
-http://baijiahao.baidu.com/s?id=1585690128446082821&wfr=spider&for=pc
+[腾讯视频发布年度指数，电视剧流量、口碑、演员价值被深度挖掘](http://baijiahao.baidu.com/s?id=1585690128446082821&wfr=spider&for=pc)
 
 
 
