--- a/analyze/data_prep.ipynb
+++ b/analyze/data_prep.ipynb
@@ -62,7 +62,48 @@
    "outputs": [],
    "source": [
     "#新建一个表，用于导入csv数据\n",
-    "create_Hive_table_sql = '''create table test(id FLOAT,name STRING,man FLOAT,woman FLOAT,below20 FLOAT,t_to_t4 FLOAT,t5_to_t9 FLOAT,th_to_th4 FLOAT,th5_to_th9 FLOAT,above40 FLOAT,bachelor_degree_or_above FLOAT,undergraduate_and_below FLOAT,second_tier_city FLOAT,fourth_tier_city FLOAT,third_tier_citiy FLOAT,first_tier_city FLOAT,occupation1 STRING,per1 FLOAT,occupation2 STRING,per2 FLOAT,occupation3 STRING,per3 FLOAT,preference_film1 STRING,pers1 FLOAT,preference_film2 STRING,pers2 FLOAT,preference_film3 STRING,pers3 FLOAT,preference_film4 STRING,pers4 FLOAT,preference_film5 STRING,pers5 FLOAT,bought1 STRING,bought2 STRING,bought3 STRING,bought4 STRING,bought5 STRING,bought6 STRING,bought7 STRING,bought8 STRING,bought9 STRING,bought10 STRING) ROW format delimited fields terminated by ',' STORED AS TEXTFILE'''"
+    "create_Hive_table_sql = '''create table test(id FLOAT,\n",
+    "name STRING,\n",
+    "man FLOAT,\n",
+    "woman FLOAT,\n",
+    "below20 FLOAT,\n",
+    "t_to_t4 FLOAT,\n",
+    "t5_to_t9 FLOAT,\n",
+    "th_to_th4 FLOAT,\n",
+    "th5_to_th9 FLOAT,\n",
+    "above40 FLOAT,\n",
+    "bachelor_degree_or_above FLOAT,\n",
+    "undergraduate_and_below FLOAT,\n",
+    "second_tier_city FLOAT,\n",
+    "fourth_tier_city FLOAT,\n",
+    "third_tier_citiy FLOAT,\n",
+    "first_tier_city FLOAT,\n",
+    "occupation1 STRING,\n",
+    "per1 FLOAT,\n",
+    "occupation2 STRING,\n",
+    "per2 FLOAT,\n",
+    "occupation3 STRING,\n",
+    "per3 FLOAT,\n",
+    "preference_film1 STRING,\n",
+    "pers1 FLOAT,\n",
+    "preference_film2 STRING,\n",
+    "pers2 FLOAT,\n",
+    "preference_film3 STRING,\n",
+    "pers3 FLOAT,\n",
+    "preference_film4 STRING,\n",
+    "pers4 FLOAT,\n",
+    "preference_film5 STRING,\n",
+    "pers5 FLOAT,\n",
+    "bought1 STRING,\n",
+    "bought2 STRING,\n",
+    "bought3 STRING,\n",
+    "bought4 STRING,\n",
+    "bought5 STRING,\n",
+    "bought6 STRING,\n",
+    "bought7 STRING,\n",
+    "bought8 STRING,\n",
+    "bought9 STRING,\n",
+    "bought10 STRING) ROW format delimited fields terminated by ',' STORED AS TEXTFILE'''"
    ]
   },
   {
@@ -116,7 +157,48 @@
    "outputs": [],
    "source": [
     "#建表用于存放筛选后的数据\n",
-    "create_first_prep_sql= '''create table test_a(id FLOAT,name STRING,man FLOAT,woman FLOAT,below20 FLOAT,t_to_t4 FLOAT,t5_to_t9 FLOAT,th_to_th4 FLOAT,th5_to_th9 FLOAT,above40 FLOAT,bachelor_degree_or_above FLOAT,undergraduate_and_below FLOAT,second_tier_city FLOAT,fourth_tier_city FLOAT,third_tier_citiy FLOAT,first_tier_city FLOAT,occupation1 STRING,per1 FLOAT,occupation2 STRING,per2 FLOAT,occupation3 STRING,per3 FLOAT,preference_film1 STRING,pers1 FLOAT,preference_film2 STRING,pers2 FLOAT,preference_film3 STRING,pers3 FLOAT,preference_film4 STRING,pers4 FLOAT,preference_film5 STRING,pers5 FLOAT,bought1 STRING,bought2 STRING,bought3 STRING,bought4 STRING,bought5 STRING,bought6 STRING,bought7 STRING,bought8 STRING,bought9 STRING,bought10 STRING) ROW format delimited fields terminated by ',' STORED AS TEXTFILE'''"
+    "create_first_prep_sql= '''create table test_a(id FLOAT,\n",
+    "name STRING,\n",
+    "man FLOAT,\n",
+    "woman FLOAT,\n",
+    "below20 FLOAT,\n",
+    "t_to_t4 FLOAT,\n",
+    "t5_to_t9 FLOAT,\n",
+    "th_to_th4 FLOAT,\n",
+    "th5_to_th9 FLOAT,\n",
+    "above40 FLOAT,\n",
+    "bachelor_degree_or_above FLOAT,\n",
+    "undergraduate_and_below FLOAT,\n",
+    "second_tier_city FLOAT,\n",
+    "fourth_tier_city FLOAT,\n",
+    "third_tier_citiy FLOAT,\n",
+    "first_tier_city FLOAT,\n",
+    "occupation1 STRING,\n",
+    "per1 FLOAT,\n",
+    "occupation2 STRING,\n",
+    "per2 FLOAT,\n",
+    "occupation3 STRING,\n",
+    "per3 FLOAT,\n",
+    "preference_film1 STRING,\n",
+    "pers1 FLOAT,\n",
+    "preference_film2 STRING,\n",
+    "pers2 FLOAT,\n",
+    "preference_film3 STRING,\n",
+    "pers3 FLOAT,\n",
+    "preference_film4 STRING,\n",
+    "pers4 FLOAT,\n",
+    "preference_film5 STRING,\n",
+    "pers5 FLOAT,\n",
+    "bought1 STRING,\n",
+    "bought2 STRING,\n",
+    "bought3 STRING,\n",
+    "bought4 STRING,\n",
+    "bought5 STRING,\n",
+    "bought6 STRING,\n",
+    "bought7 STRING,\n",
+    "bought8 STRING,\n",
+    "bought9 STRING,\n",
+    "bought10 STRING) ROW format delimited fields terminated by ',' STORED AS TEXTFILE'''"
    ]
   },
   {
@@ -135,7 +217,48 @@
    "outputs": [],
    "source": [
     "#将筛选后的数据进行插入操作\n",
-    "insert_table_sql = '''insert overwrite table test_a select * from personas where id IS NOT NULL AND name IS NOT NULL AND man IS NOT NULL AND woman IS NOT NULL AND below20 IS NOT NULL AND t_to_t4 IS NOT NULL AND t5_to_t9 IS NOT NULL AND th_to_th4 IS NOT NULL AND th5_to_th9 IS NOT NULL AND above40 IS NOT NULL AND bachelor_degree_or_above IS NOT NULL AND undergraduate_and_below IS NOT NULL AND second_tier_city IS NOT NULL AND fourth_tier_city IS NOT NULL AND third_tier_citiy IS NOT NULL AND first_tier_city IS NOT NULL AND occupation1 IS NOT NULL AND per1 IS NOT NULL AND occupation2 IS NOT NULL AND per2 IS NOT NULL AND occupation3 IS NOT NULL AND per3 IS NOT NULL AND preference_film1 IS NOT NULL AND pers1 IS NOT NULL AND preference_film2 IS NOT NULL AND pers2 IS NOT NULL AND preference_film3 IS NOT NULL AND pers3 IS NOT NULL AND preference_film4 IS NOT NULL AND pers4 IS NOT NULL AND preference_film5 IS NOT NULL AND pers5 IS NOT NULL AND bought1 IS NOT NULL AND bought2 IS NOT NULL AND bought3 IS NOT NULL AND bought4 IS NOT NULL AND bought5 IS NOT NULL AND bought6 IS NOT NULL AND bought7 IS NOT NULL AND bought8 IS NOT NULL AND bought9 IS NOT NULL AND bought10 IS NOT NULL'''"
+    "insert_table_sql = '''insert overwrite table test_a select * from personas where id IS NOT NULL \n",
+    "AND name IS NOT NULL\n",
+    "AND man IS NOT NULL \n",
+    "AND woman IS NOT NULL \n",
+    "AND below20 IS NOT NULL \n",
+    "AND t_to_t4 IS NOT NULL \n",
+    "AND t5_to_t9 IS NOT NULL \n",
+    "AND th_to_th4 IS NOT NULL \n",
+    "AND th5_to_th9 IS NOT NULL \n",
+    "AND above40 IS NOT NULL \n",
+    "AND bachelor_degree_or_above IS NOT NULL \n",
+    "AND undergraduate_and_below IS NOT NULL \n",
+    "AND second_tier_city IS NOT NULL \n",
+    "AND fourth_tier_city IS NOT NULL \n",
+    "AND third_tier_citiy IS NOT NULL \n",
+    "AND first_tier_city IS NOT NULL \n",
+    "AND occupation1 IS NOT NULL \n",
+    "AND per1 IS NOT NULL \n",
+    "AND occupation2 IS NOT NULL \n",
+    "AND per2 IS NOT NULL \n",
+    "AND occupation3 IS NOT NULL \n",
+    "AND per3 IS NOT NULL \n",
+    "AND preference_film1 IS NOT NULL \n",
+    "AND pers1 IS NOT NULL \n",
+    "AND preference_film2 IS NOT NULL \n",
+    "AND pers2 IS NOT NULL \n",
+    "AND preference_film3 IS NOT NULL \n",
+    "AND pers3 IS NOT NULL \n",
+    "AND preference_film4 IS NOT NULL \n",
+    "AND pers4 IS NOT NULL \n",
+    "AND preference_film5 IS NOT NULL \n",
+    "AND pers5 IS NOT NULL \n",
+    "AND bought1 IS NOT NULL \n",
+    "AND bought2 IS NOT NULL \n",
+    "AND bought3 IS NOT NULL \n",
+    "AND bought4 IS NOT NULL \n",
+    "AND bought5 IS NOT NULL \n",
+    "AND bought6 IS NOT NULL \n",
+    "AND bought7 IS NOT NULL \n",
+    "AND bought8 IS NOT NULL \n",
+    "AND bought9 IS NOT NULL \n",
+    "AND bought10 IS NOT NULL'''"
    ]
   },
   {
