--- a/analyze/data_prep.ipynb
+++ b/analyze/data_prep.ipynb
@@ -43,7 +43,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ceate Hive table（将csv文件导入，后续改成hive和hbase映射）"
+    "# 实现hive和hbase映射"
    ]
   },
   {
@@ -52,12 +52,129 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cursor.execute(\"DROP TABLE IF EXISTS test\")"
+    "cursor.execute(\"DROP TABLE IF EXISTS test_01\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mapping_from_hbase_to_hive_sql = '''CREATE EXTERNAL TABLE test_01(id FLOAT,\n",
+    "name STRING,\n",
+    "man FLOAT,\n",
+    "woman FLOAT,\n",
+    "below20 FLOAT,\n",
+    "t_to_t4 FLOAT,\n",
+    "t5_to_t9 FLOAT,\n",
+    "th_to_th4 FLOAT,\n",
+    "th5_to_th9 FLOAT,\n",
+    "above40 FLOAT,\n",
+    "bachelor_degree_or_above FLOAT,\n",
+    "undergraduate_and_below FLOAT,\n",
+    "second_tier_city FLOAT,\n",
+    "fourth_tier_city FLOAT,\n",
+    "third_tier_citiy FLOAT,\n",
+    "first_tier_city FLOAT,\n",
+    "occupation1 STRING,\n",
+    "per1 FLOAT,\n",
+    "occupation2 STRING,\n",
+    "per2 FLOAT,\n",
+    "occupation3 STRING,\n",
+    "per3 FLOAT,\n",
+    "preference_film1 STRING,\n",
+    "pers1 FLOAT,\n",
+    "preference_film2 STRING,\n",
+    "pers2 FLOAT,\n",
+    "preference_film3 STRING,\n",
+    "pers3 FLOAT,\n",
+    "preference_film4 STRING,\n",
+    "pers4 FLOAT,\n",
+    "preference_film5 STRING,\n",
+    "pers5 FLOAT,\n",
+    "bought1 STRING,\n",
+    "bought2 STRING,\n",
+    "bought3 STRING,\n",
+    "bought4 STRING,\n",
+    "bought5 STRING,\n",
+    "bought6 STRING,\n",
+    "bought7 STRING,\n",
+    "bought8 STRING,\n",
+    "bought9 STRING,\n",
+    "bought10 STRING)STORED BY 'org.apache.hadoop.hive.hbase.HBaseStorageHandler' \n",
+    "WITH SERDEPROPERTIES (\"hbase.columns.mapping\" = \":key,info:id,\n",
+    "info:name,\n",
+    "info:man,\n",
+    "info:woman,\n",
+    "info:below20,\n",
+    "info:t_to_t4,\n",
+    "info:t5_to_t9,\n",
+    "info:th_to_th4,\n",
+    "info:th5_to_th9,\n",
+    "info:bachelor_degree_or_above,\n",
+    "info:undergraduate_and_below,\n",
+    "info:second_tier_city,\n",
+    "info:fourth_tier_city,\n",
+    "info:third_tier_citiy,\n",
+    "info:first_tier_city,\n",
+    "info:occupation1,\n",
+    "info:per1,\n",
+    "info:occupation2,\n",
+    "info:per2,\n",
+    "info:occupation3,\n",
+    "info:per3,\n",
+    "info:preference_film1,\n",
+    "info:pers1,\n",
+    "info:preference_film2,\n",
+    "info:pers2,\n",
+    "info:preference_film3,\n",
+    "info:pers3,\n",
+    "info:preference_film4,\n",
+    "info:pers4,\n",
+    "info:preference_film5,\n",
+    "info:pers5,\n",
+    "info:bought1,\n",
+    "info:bought2,\n",
+    "info:bought3,\n",
+    "info:bought4,\n",
+    "info:bought5,\n",
+    "info:bought6,\n",
+    "info:bought7,\n",
+    "info:bought8,\n",
+    "info:bought9,\n",
+    "info:bought10\") \n",
+    "TBLPROPERTIES(\"hbase.table.name\" = \"hbase_code_test\")'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#cursor.execute(mapping_from_hbase_to_hive_sql)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ceate Hive table（将csv文件导入，后续改成hive和hbase映射）"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cursor.execute(\"DROP TABLE IF EXISTS test\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,17 +639,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "sql = 'select * from personas'\n",
-    "pd = pd.read_sql(sql,db)\n"
+    "pd = pd.read_sql(sql,db)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -673,7 +790,7 @@
        "0    头号玩家    后来的我们  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
