--- a/docs/字段.md
+++ b/docs/字段.md
@@ -1,26 +1,65 @@
-| Hbase字段 | Hive字段 |
-| ---------- | ------- |
-| rowkey | id
-| n | name
-| m | male
-| fm | female
-| un20 | under20
-| 20to24 | 20to24
-| 25to29 | 25to29
-| 30to34 | 30to34
-| 35to39 | 35to39
-| ab40 | above40
-| dg_h | degree_high
-| dg_l | degree_low
-| ct1 | city1
-| ct2 | city2
-| ct3 | city3
-| ct4 | city4
-| oc_w | occupation_whitecollar
-| oc_s | occupation_student
-| oc_o | occupation_others
-| pf_ac | preference_action
-| pf_co | preference_comedy
-| pf_ro | preference_romance
-| pf_sc | occupation_science
-| pf_an | occupation_animate
+
+| Hbase字段 | Hive字段 | 备注 |
+| ---------- | ------- | ----- |
+| rowkey | id | 行键 （即主键，电影名字的MD5）
+| n | name | 电影名字
+| m | male | 男性比例
+| fm | female | 女性比例
+| un20 | under20 | 20岁以下比例
+| 20to24 | 20to24 |
+| 25to29 | 25to29 |
+| 30to34 | 30to34 |
+| 35to39 | 35to39 |
+| ab40 | above40 | 40岁以上比例
+| dg_h | degree_high | 高学历
+| dg_l | degree_low | 低学历
+| ct1 | city1 | 一线城市
+| ct2 | city2 | 二线城市
+| ct3 | city3 |
+| ct4 | city4 | 
+| oc_w | occupation_whitecollar | 白领
+| oc_s | occupation_student | 学生
+| oc_o | occupation_others | 其他职业
+| pf_ac | preference_action | 偏好动作片
+| pf_co | preference_comedy | 偏好喜剧片
+| pf_ro | preference_romance | 偏好爱情片
+| pf_sc | occupation_science | 偏好科幻片
+| pf_an | occupation_animate | 偏好动画片
+| dr | director | 导演
+| a1 | actor1 | 演员1
+| a2 | actor2 | 演员2
+| a3 | actor3 | 演员3
+| a4 | actor4 | 演员4
+| t_aq | t_romance | 爱情
+| t_xj | t_comedy | 喜剧
+| t_dh | t_animate | 动画
+| t_jq | t_plot | 剧情
+| t_kb | t_horror | 恐怖
+| t_js | t_thriller | 惊悚
+| t_kh | t_science | 科幻
+| t_dz | t_action | 动作
+| t_xy | t_suspense | 悬疑
+| t_fz | t_crime | 犯罪
+| t_mx | t_adventure | 冒险
+| t_zz | t_war | 战争
+| t_qh | t_fantasy | 奇幻
+| t_yd | t_sports | 运动
+| t_jt | t_family | 家庭
+| t_gz | t_costume | 古装
+| t_wx | t_sword | 武侠
+| t_xb | t_cowboy | 西部
+| t_ls | t_history | 历史
+| t_zj | t_biography | 传记
+| t_gw | t_dance | 歌舞
+| t_hs | t_dark | 黑色电影
+| t_dp | t_short | 短片
+| t_jl | t_documentary | 纪录片
+| t_jt | t_others | 其他
+| c_om | c_western | 欧美
+| c_rh | c_japankorea | 日韩
+| c_tw | c_taiwan | 台湾
+| c_xg | c_hongkong | 香港
+| c_nd | c_mainland | 内地
+| c_yd | c_india | 印度
+| c_qt | c_others | 其他
+
