--- a/docs/字段.md
+++ b/docs/字段.md
@@ -62,4 +62,29 @@
 | c_nd | c_mainland | 内地
 | c_yd | c_india | 印度
 | c_qt | c_others | 其他
+|j_gn  |j_gana	|戛纳获奖数目
+j_wns |	j_winisi	|威尼斯获奖数目
+j_bl	|j_bolin	|柏林获奖数目
+j_ask	|j_aosika	|奥斯卡获奖数目
+j_jj	|j_jinji	|金鸡获奖数目
+j_bh	|j_bahua	|百花获奖数目
+j_hb	|j_huabiao	|华表获奖数目
+j_jx	|j_jinxiang	|金像获奖数目
+j_jm	|j_jinma	|金马获奖数目
+jnum_gj	|jnum_guoji	|国际获奖总数
+jnum_hy	|jnum_huayu	|华语获奖总数
+jnum_else	|jnum_else	|其他获奖总数		
+tm_gn 	|tm_gana	|戛纳提名数目
+tm_wns 	|tm_winisi	|威尼斯提名数目
+tm_bl	|tm_bolin	|柏林提名数目
+tm_ask	|tm_aosika	|奥斯卡提名数目
+tm_jj	|tm_jinji	|金鸡提名数目
+tm_bh	|tm_baihua	|百花提名数目
+tm_hb	|tm_huabiao	|华表提名数目
+tm_jx	|tm_jinxiang	|金像提名数目
+tm_jm	|tm_jinma	|金马提名数目
+tmnum_gj	|tmnum_guoji	|国际提名总数
+tmnum_hy	|tmnum_huayu	|华语提名总数
+tmnum_else	|tmnum_else	|其他提名总数
+
 
