--- a/docs/需求分析.md
+++ b/docs/需求分析.md
@@ -1,3 +1,4 @@
+![Markdown](http://i1.bvimg.com/678952/04541047510b1c00.png)
 ![image](blob:/null/09d355a3-a309-4870-ad43-9c638b8848b5)
 - 如性别比例、年龄、职业的可视化以及地区可视化为地图这些数据的本身的可视化下面省略不写,
 - date这个字段表示上映日期，为准备进行时间序列分析都带上了。
