--- a/docs/字段.md
+++ b/docs/字段.md
@@ -86,5 +86,8 @@ tm_jm	|tm_jinma	|金马提名数目
 tmnum_gj	|tmnum_guoji	|国际提名总数
 tmnum_hy	|tmnum_huayu	|华语提名总数
 tmnum_else	|tmnum_else	|其他提名总数
+bof|boxoffice|票房
+da|mdate|上映日期
+cl|mclass|电影类型
 
 
