更新字段文档

--- a/docs/字段.md
+++ b/docs/字段.md
@@ -55,13 +55,24 @@
 | t_dp | t_short | 短片
 | t_jl | t_documentary | 纪录片
 | t_jt | t_others | 其他
-| c_om | c_western | 欧美
-| c_rh | c_japankorea | 日韩
-| c_tw | c_taiwan | 台湾
-| c_xg | c_hongkong | 香港
-| c_nd | c_mainland | 内地
-| c_yd | c_india | 印度
-| c_qt | c_others | 其他
+| c_dl | c_Mainland | 大陆
+| c_mg | c_America | 美国
+| c_hg | c_Korea | 韩国
+| c_rb | c_Japan | 日本
+| c_xg | c_Hongkong | 香港
+| c_tw | c_Taiwan | 台湾
+| c_tg | c_Thailand | 泰国
+| c_yd | c_India | 印度
+| c_fg | c_France | 法国
+| c_yg | c_England | 英国
+| c_els | c_Russia | 俄罗斯
+| c_ydl | c_Italy | 意大利
+| c_xby | c_Spain | 西班牙
+| c_dg | c_Germany | 德国
+| c_bl | c_Poland | 波兰
+| c_ad | c_Australia | 澳大利亚
+| c_yl | c_Iran | 伊朗
+| c_qt | c_Others | 其他
 | j_gn  |j_gana	|戛纳获奖数目
 | j_wns | j_winisi	|威尼斯获奖数目
 | j_bl	|j_bolin	|柏林获奖数目
