--- a/analyze/MySQL_prep.ipynb
+++ b/analyze/MySQL_prep.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,86 +31,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/hadoop/.local/lib/python3.5/site-packages/pymysql/cursors.py:170: Warning: (1051, \"Unknown table 'comex.test'\")\n",
-      "  result = self._query(query)\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "0"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#cursor.execute(\"DROP TABLE IF EXISTS personas\")"
+    "cursor.execute(\"DROP TABLE IF EXISTS personas\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sql ='''CREATE TABLE `comex`.`personas` (`id` varchar(20),\n",
+    "sql = '''CREATE TABLE `comex`.`personas` (`id` varchar(100),\n",
     "`name` varchar(20),\n",
-    "`man` varchar(20),\n",
-    "`woman` varchar(20),\n",
-    "`below20` varchar(20),\n",
-    "`t_to_t4` varchar(20),\n",
-    "`t5_to_t9` varchar(20),\n",
-    "`th_to_th4` varchar(20),\n",
-    "`th5_to_th9` varchar(20),\n",
+    "`male` varchar(20),\n",
+    "`female` varchar(20),\n",
+    "`under20` varchar(20),\n",
+    "`20to24` varchar(20),\n",
+    "`25to29` varchar(20),\n",
+    "`30to34` varchar(20),\n",
+    "`35to39` varchar(20),\n",
     "`above40` varchar(20),\n",
-    "`bachelor_degree_or_above` varchar(20),\n",
-    "`undergraduate_and_below` varchar(20),\n",
-    "`second_tier_city` varchar(20),\n",
-    "`fourth_tier_city` varchar(20),\n",
-    "`third_tier_citiy` varchar(20),\n",
-    "`first_tier_city` varchar(20),\n",
-    "`occupation1` varchar(20),\n",
-    "`per1` varchar(20),\n",
-    "`occupation2` varchar(20),\n",
-    "`per2` varchar(20),\n",
-    "`occupation3` varchar(20),\n",
-    "`per3` varchar(20),\n",
-    "`preference_film1` varchar(20),\n",
-    "`pers1` varchar(20),\n",
-    "`preference_film2` varchar(20),\n",
-    "`pers2` varchar(20),\n",
-    "`preference_film3` varchar(20),\n",
-    "`pers3` varchar(20),\n",
-    "`preference_film4` varchar(20),\n",
-    "`pers4` varchar(20),\n",
-    "`preference_film5` varchar(20),\n",
-    "`pers5` varchar(20),\n",
-    "`bought1` varchar(20),\n",
-    "`bought2` varchar(20),\n",
-    "`bought3` varchar(20),\n",
-    "`bought4` varchar(20),\n",
-    "`bought5` varchar(20),\n",
-    "`bought6` varchar(20),\n",
-    "`bought7` varchar(20),\n",
-    "`bought8` varchar(20),\n",
-    "`bought9` varchar(20),\n",
-    "`bought10` varchar(20))\n",
-    "ENGINE=InnoDB DEFAULT CHARSET=utf8;'''"
+    "`degree_high` varchar(20),\n",
+    "`degree_low` varchar(20),\n",
+    "`city1` varchar(20),\n",
+    "`city2` varchar(20),\n",
+    "`city3` varchar(20),\n",
+    "`city4` varchar(20),\n",
+    "`occupation_whitecollar` varchar(20),\n",
+    "`occupation_student` varchar(20),\n",
+    "`occupation_others` varchar(20),\n",
+    "`preference_action` varchar(20),\n",
+    "`preference_comedy` varchar(20),\n",
+    "`preference_romance` varchar(20),\n",
+    "`occupation_science` varchar(20),\n",
+    "`occupation_animate` varchar(20)\n",
+    ") ENGINE=InnoDB DEFAULT CHARSET=utf8\n",
+    "'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +94,7 @@
        "0"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
